Fixed stupid horizontal scrollbar that exists for no reason

--- a/styles/CharSheet.css
+++ b/styles/CharSheet.css
@@ -1,3 +1,7 @@
+body {
+    overflow-x: hidden;
+}
+
 .section-head {
     color: white;
     background-color: dimgray;
